fix some spacing issues

--- a/web/accordion.css
+++ b/web/accordion.css
@@ -9,7 +9,7 @@ div.device.accordion-container {
   margin: -15px 15px 0 0;
   background-color: gray;
 
-  height: 300px;
+  height: 265px;
   width: 100px;
   /*padding: 0.5em;*/
 }
@@ -20,14 +20,19 @@ div.device.accordion-container {
   transform-origin:top left;
   -webkit-transform-origin:top left;
   /*clear:none;*/
-  width: 300px;
+  width: 270px;
+  margin-top: 9px !important;
+  padding-left: 0.5em;
   margin-top: 0; /*50% of width (which is really the height now)*/
   border-bottom: 1px dashed black;
   font-size: 16pt;
   font-weight: bold;
+  cursor: default;
 }
 .tab .buttons {
   margin-left: 1em;
+  margin-top: 15px;
+  padding-left: 5px;
 }
 
 .accordion {
